[OPIK-160] Fix trace and span error during insertion due to input/output size